  attribute.
  (Antonin Décimo, review by Nicolás Ojeda Bär, Xavier Leroy, and
   Gabriel Scherer)

- #13083: Use macros from limits.h to avoid signed-integer wrap-around.
  Introduce CAML_{U,}INTNAT_{MIN,MAX} macros to expose {u,}intnat limits.
  (Antonin Décimo, review by Nick Barnes, Xavier Leroy, Gabriel Scherer,
   and Miod Vallat)

### Code generation and optimizations:

- #13014: Enable compile-time option -function-sections on all previously
  unsupported native backends (POWER, riscv64 and s390x)
  (Miod Vallat, review by Nicolás Ojeda Bär)

- #7241, #12555, #13076, #13138: fix a soundness bug in the
  pattern-matching compiler when side-effects mutate the scrutinee
  during matching.
  Note that #7241 is not fully fixed yet, see the issue for the
  current status.
  (Gabriel Scherer, review by Nick Roberts)

- #13179: Fix evaluation of toplevel lets in classes containing
  local opens
  (Vincent Laviron, review by Hugo Heuzard, Nathanaëlle Courant
   and Gabriel Scherer)

### Standard library:

- #13168: In Array.shuffle, clarify the code that validates the
  result of the user-supplied function `rand`, and improve the
  error message that is produced when this result is invalid.
  (François Pottier, review by Florian Angeletti, Daniel Bünzli
   and Gabriel Scherer)

- #12133: Expose support for printing substrings in Format
  (Florian Angeletti, review by Daniel Bünzli, Gabriel Scherer
   and Nicolás Ojeda Bär)

- #12869: Add List.take, List.drop, List.take_while and List.drop_while
  (Kate Deplaix and Oscar Butler-Aldridge, review by Nicolás Ojeda Bär,
   Craig Ferguson and Gabriel Scherer)

- #12885: move Dynarray to an unboxed representation
  (Gabriel Scherer, suggestions by Vincent Laviron,
   review by Olivier Nicole and Simon Cruanes, Yann Leray, Alain Frisch)

- #13047: Add Sys.poll_actions to (only) run pending runtime actions.
  (Nick Barnes, review by Gabriel Scherer, Guillaume Munch-Maccagnoni, and
  Vincent Laviron)
